--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.1",
     "eslint": "^8.22.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.0",
-    "mongoose": "^6.5.2",
+    "mongoose": "^6.6.4",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
@@ -23,9 +22,13 @@
     "validator": "^13.7.0"
   },
   "scripts": {
+    "start": "node server.js",
     "start-dev": "set NODE_ENV=development&& node server.js",
     "start-test": "set NODE_ENV=testing&& node server.js",
     "start-prod": "set NODE_ENV=production&& node server.js",
     "nodemon-dev": "npx nodemon --exec npm run start-dev"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
