removed dotenv from dependancies

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "validator": "^13.7.0",
-    "dotenv": "^16.0.3"
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "node server.js",
